objects/DK_Volume__c.object
<CustomObject>
    <label>DK Travel Volume</label>
    <nameField>
        <displayFormat>DK-{00000000}</displayFormat>
        <label>DK Volume</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DK Travel Volumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Trip</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Avenir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DK Travel Volumes</relationshipLabel>
        <relationshipName>DK_Travel_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchID__c</fullName>
        <formula>CASESAFEID(Account_Number__r.Account__r.Id)  &amp;  Reported_Month__c  &amp;  Reported_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Days__c</fullName>
        <label># Car Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Spend__c</fullName>
        <label>Car Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Spend__c</fullName>
        <label>Hotel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Trips__c</fullName>
        <description>This represents total Avenir Trip Total for a defined period.</description>
        <label>Total Trips</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights__c</fullName>
        <label># Hotel Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBT_Adoption__c</fullName>
        <label>% OBT Adoption</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DK_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>DK ExternalID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Year__c</fullName>
        <label>Reported Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Volume__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Volume</label>
        <referenceTo>Travel_Volume__c</referenceTo>
        <relationshipLabel>DK Travel Volumes</relationshipLabel>
        <relationshipName>DK_Travel_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number Name</label>
        <referenceTo>Account_Number__c</referenceTo>
        <relationshipLabel>DK Travel Volumes</relationshipLabel>
        <relationshipName>DK_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reported_Month__c</fullName>
        <label>Reported Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Total__c</fullName>
        <label>Air Spend-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Transactions__c</fullName>
        <label># Air Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Domestic__c</fullName>
        <label>Air Spend-Domestic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Month__c</fullName>
        <label>First Day of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number_Actual__c</fullName>
        <formula>Account_Number__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Transborder__c</fullName>
        <label>Air Spend-Transborder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sync_DK_Travel_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync DK Travel Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Spend_International__c</fullName>
        <label>Air Spend-International</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Account_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, removes the account number from calculations for the account</inlineHelpText>
        <label>Exclude from Account Calculation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>